--- a/school-apps/pom.xml
+++ b/school-apps/pom.xml
@@ -54,7 +54,7 @@
                 <version>3.3.1</version>
                 <configuration>
                     <from>
-                        <image>openjdk:17</image>
+                        <image>openjdk:17-oracle</image>
                     </from>
                     <container>
                         <ports>
