--- a/school-apps/pom.xml
+++ b/school-apps/pom.xml
@@ -77,10 +77,10 @@
                     <plugin>
                         <groupId>com.google.cloud.tools</groupId>
                         <artifactId>jib-maven-plugin</artifactId>
-                        <version>2.5.2</version>
+                        <version>3.3.1</version>
                         <configuration>
                             <from>
-                                <image>openjdk:15</image>
+                                <image>openjdk:17-oracle</image>
                             </from>
                             <container>
                                 <ports>
@@ -129,10 +129,10 @@
                     <plugin>
                         <groupId>com.google.cloud.tools</groupId>
                         <artifactId>jib-maven-plugin</artifactId>
-                        <version>2.5.2</version>
+                        <version>3.3.1</version>
                         <configuration>
                             <from>
-                                <image>openjdk:15</image>
+                                <image>openjdk:17-oracle</image>
                             </from>
                             <container>
                                 <ports>
